fix: badge icon alignment in chinese killfeed

--- a/client/src/scss/pages/client/game.scss
+++ b/client/src/scss/pages/client/game.scss
@@ -419,6 +419,10 @@
 
             &.no-spaces {
                 display: block;
+
+                img {
+                    vertical-align: middle;
+                }
             }
         }
     }
